@@ -1,3 +1,5 @@
+* Allow to deactivate only empty locations
+
 Version 4.4.0 - 2017-05-01
 * Bug fixes (see mercurial logs for details)
 * Add employee on shipments for some states
